chore: remove sample fields and handlers

--- a/discussion_grading/static/html/discussion_grading.html
+++ b/discussion_grading/static/html/discussion_grading.html
@@ -1,5 +1,1 @@
-<div class="discussion_grading_block">
-<p>XBlockDiscussionGrading: count is now
-    <span class='count'>{self.count}</span> (click me to increment).
-</p>
-</div>
+<div class="discussion_grading_block"></div>
