refactor: show error message in xblock

--- a/discussion_grading/static/html/discussion_grading.html
+++ b/discussion_grading/static/html/discussion_grading.html
@@ -9,4 +9,5 @@
         <button id="calculate-grade">{% trans block.button_text %}</button>
     {% endif %}
     <p id="score">{% trans "Your score is:" %} {{ weighted_score }} / {{ block.weight }}</p>
+    <p id="error-message"></p>
 </div>
