chore: update translations

--- a/discussion_grading/public/html/discussion_grading.html
+++ b/discussion_grading/public/html/discussion_grading.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="discussion-grading-block">
-    <p>{{ block.instructions_text }}</p>
+    <p>{% trans block.instructions_text %}</p>
     {% if block.max_attempts %}
         <p>{% trans "You have made" %} ({{ block.attempts}}/{{ block.max_attempts }}) {% trans "attempts to calculate the grading." %}</p>
     {% endif %}
