feat: add support for discussion grading (#2)

--- a/discussion_grading/static/html/discussion_grading.html
+++ b/discussion_grading/static/html/discussion_grading.html
@@ -1,1 +1,13 @@
-<div class="discussion_grading_block"></div>
+{% load i18n %}
+
+<div class="discussion-grading-block">
+    <p>{{ block.instructions_text }}</p>
+    {% if block.max_attempts %}
+        <p>{% trans "You have made" %} ({{ block.attempts}}/{{ block.max_attempts }}) {% trans "attempts to calculate the grading." %}</p>
+    {% endif %}
+    {% if not block.max_attempts or block.attempts < block.max_attempts %}
+        <button id="calculate-grade">{% trans block.button_text %}</button>
+    {% endif %}
+    <p id="score">{% trans "Your score is:" %} {{ weighted_score }} / {{ block.weight }}</p>
+    <p id="error-message"></p>
+</div>
